2010-05-04  Minh Tran Dao  <dao@.kr.tuwien.ac.at>

	* src/PrimitiveDMCS.cpp: Fix SegFault and get transfer time.

	* include/ReturnMessage.h: Update outputting result.

	* include/StatsInfo.h: Update outputting result, update transfer
	time from neighbors.

2010-05-04  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/StatsInfo.h: Add STATS_DIFF and STATS_DIFF_REUSE macros.
	Do some code clean-ups.
	* src/PrimitiveDMCS.cpp: Likewise.
	* include/BaseDMCS.h: Likewise.
	* include/PrimitiveDMCS.h: Likewise.
	* include/CommandType.h: Likewise.

2010-05-03  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* configure.ac: Add BOOST_DATE_TIME

	* src/PrimitiveDMCS.cpp: Add statistic information.
	* src/dmcsc.cpp: Likewise.

	* include/StatsInfo.h: Define operator<< and combine()

	* include/Server.tcc: Add some debug information.

	* include/Message.h: Remove sub-messages and put them to
	separated files.
	* include/OptDMCS.h: Likewise.
	* include/PrimitiveDMCS.h: Likewise.
	* include/Session.h: Likewise.
	* include/Makefile.am: Likewise.

	* include/OptMessage.h: New file.
	* include/PrimitiveMessage.h: Likewise.
	* include/ReturnMessage.h: Likewise.

	* include/CommandType.h: Realize continues().

	* include/BaseDMCS.h: Add case distinction for StatisticInformation.

2010-05-02  Minh Tran Dao  <dao@dvorak.kr.tuwien.ac.at>

	* src/Makefile.am: Add date_time library.
	* include/Makefile.am: Add StatsInfo.h

	* include/Client.h: Use CmdType instead of Message_t.
	* include/Client.tcc: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/PrimitiveDMCS.cpp: Likewise.
	* src/OptDMCS.cpp: Likewise.
	* include/Message.h: Likewise.
	* include/CommandType.h: Likewise.

	* include/Message.h: Add ReturnMessage.
	* include/StatsInfo.h: New file.

2010-05-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/BeliefCombination.cpp: Fix debug output.
	(dmcs::project_to): Sort and unique projection result.

	* include/SatSolver.tcc (dmcs::solve): Throw exception when there