@@ -34,6 +34,7 @@
 
 #include "BaseDMCS.h"
 #include "OptMessage.h"
+#include "ReturnMessage.h"
 #include "Cache.h"
 #include "Theory.h"
 
@@ -42,12 +43,21 @@ namespace dmcs {
 class OptDMCS : public BaseDMCS
 {
 public:
+
+#if defined(DMCS_STATS_INFO)
+  typedef ReturnMessage      dmcs_value_type;
+  typedef ReturnMessagePtr   dmcs_return_type;
+#else
+  typedef BeliefStateList    dmcs_value_type;
+  typedef BeliefStateListPtr dmcs_return_type;
+#endif
+
   OptDMCS(const ContextPtr& c, const TheoryPtr& t);
 
   virtual
   ~OptDMCS();
 
-  BeliefStateListPtr
+  dmcs_return_type
   getBeliefStates(const OptMessage& mess);
 
 private:
